tests/assignement/to_bool.rev
var bool = 1 // error: missing variable name after 'var' keyword in declaration